Bug 515869 - root-owned file on desktop can't be trashed with shortcut / context menu and does not give any indication about it
Summary: root-owned file on desktop can't be trashed with shortcut / context menu and ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 6.6.80
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2026-02-11 12:16 UTC by Tobias Fella
Modified: 2026-06-17 11:09 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias Fella 2026-02-11 12:16:53 UTC
SUMMARY
root-owned file on desktop can't be trashed with shortcut / context menu and does not give any indication about it. that it can't be deleted makes sense, but there should be a visible error about it

STEPS TO REPRODUCE
1. sudo touch /home/user/Desktop/foo
2. Try deleting file using shortcut or context menu

OBSERVED RESULT
Nothing

EXPECTED RESULT
Error message

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: master (~6.6)
KDE Frameworks Version: git master
Qt Version: git master (~6.11)
Comment 1 Nate Graham 2026-02-20 18:08:06 UTC
Or better yet, prompt for privilege escalation to delete it.
Comment 2 Tobias Fella 2026-06-17 11:09:21 UTC
Git commit f681d5346b8d49a1c5119c1c48a48477cf7355bb by Tobias Fella.
Committed on 17/06/2026 at 09:33.
Pushed by tfella into branch 'master'.

Set UI delegate for trash job

This ensures that errors are shown to the user

M  +1    -0    containments/desktop/plugins/folder/foldermodel.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/f681d5346b8d49a1c5119c1c48a48477cf7355bb