Set UI delegate for trash job

This ensures that errors are shown to the user

BUG: 515869